# actionbook

./: .agent-prompt-cue-653-review.md  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GROWTH.md  LICENSE  README.md  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: bright-eels-juggle.md  changelog.js  cli-browser-close-idempotent.md  cli-cdp-error-taxonomy.md  cli-daemon-sweep-empty-session-dirs.md  cli-eval-file-stdin-sources.md  cli-eval-structured-error-codes.md  cli-har-truncation-signal.md  cli-hyperbrowser-proxy-country.md  cli-patch-release.md  cli-session-reuse-collapse.md  cli-wait-network-idle-edge-triggered.md  cloud-providers-p-flag.md  config.json  cue-653-wss-cdp-support.md  dify-plugin-http-api.md  ext-simplify-tab-ownership.md  extension-0-3-0.md  extension-bridge-startup-hardening.md  extension-tabgroup-bowtie-icon.md  fix-daemon-wss-connect.md  fix-daemon-wss-probe.md  goofy-otters-fix.md  hermes-agent-integration.md  json-ui-syntax-highlighting.md  multi-session-support.md  release-cli-stable.md  restore-extension-mode.md  windows-e2e-chrome-cleanup.md
.claude-plugin/: marketplace.json  plugin.json
.docs/: cli-devflow.md  skill-design-analysis.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  performance-issue.yml  question.yml
.github/workflows/: discord-release-notify.yml  e2e-windows.yml  release-cli.yml  release-extension.yml  release.yml  test.yml
apps/api-service/: .env.example  .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: docs.json  examples.mdx  index.mdx  openclaw.mdx  quickstart.mdx
docs/api-reference/: cli.mdx  evaluate-api.mdx  mcp-tools.mdx
docs/community/: contributing.mdx
docs/guides/: browser-extension.mdx  browser.mdx  cli-and-skills.mdx  installation.mdx  mcp-server.mdx  sdk-integration.mdx  skills.mdx
docs/snippets/: install-tabs.mdx
issues/: 004-multi-url-new-tab-returns-before-navigation.md
playground/article-exporter/: SKILL.md
playground/deep-research/: README.md
playground/rust-learner/: README.md  setup.sh
playground/stagehand-agent/: README.md
plugins/actionbook/: README.md
scripts/: actionbook-dev.sh  sync-versions.js
services/knowledge-builder-any/: .env.example  Cargo.toml  package.json
services/knowledge-builder-any/docs/: architecture.md  deployment.md  e2e-testing-guide.md  how-it-works.md  sites.md  testing.md
services/knowledge-builder-any/src/: analyzer.rs  chunker.rs  crawler.rs  embedding.rs  error.rs  fixer.rs  handbook.rs  lib.rs  main.rs  prompt_manager.rs  validator.rs
services/knowledge-builder-any/src/db/: build_tasks.rs  chunks.rs  connection.rs  documents.rs  mod.rs  models.rs  source_versions.rs  sources.rs
services/knowledge-builder-any/src/worker/: config.rs  mod.rs  processor.rs  task_runner.rs
services/knowledge-builder-any/tests/: test_url_hash_conflict.rs
skills/actionbook/: SKILL.md
test-report/: index.html
(+48639 files in other folders)
