[package]
name = "handbook_builder"
version = "0.1.0"
edition = "2021"
description = "A Rust service for analyzing websites and generating handbook documentation using Claude AI"
authors = ["Cue Labs, Inc."]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client for web crawling
reqwest = { version = "0.12", features = ["json", "cookies"] }

# HTML parsing
scraper = "0.21"

# Claude Code SDK
cc-sdk = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

# URL parsing
url = "2.5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
pgvector = "0.4"

# OpenAI API (for embeddings)
async-openai = "0.25"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Environment variables
dotenvy = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.11"

[dev-dependencies]
tokio-test = "0.4"
